[tool.poetry]
name = "st-main"
version = "0.1.0"
description = "Module with educational applications for RANEPA students."
authors = ["RANEPA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.3"
requests = "^2.31.0"
plotly = "^5.18.0"
streamlit = "^1.30.0"
streamlit-option-menu = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
